# UDP-Server-With-Flatbuffers

./: CMakeLists.txt  LICENSE  Log.cpp  README.md  Utils.cpp  rebuild_xcode.sh
client/: Account.cpp  Account.hpp  Context.cpp  Context.hpp  Main.cpp  Message.cpp  Message.hpp  Post.cpp  Post.hpp
client/tests/: TestMain.cpp
flatbuffers/: account.fbs  build.sh  packet.fbs  post.fbs  types.fbs
flatbuffers/account/: add_friend_req.fbs  build.sh  edit_profile_req.fbs  get_profile_req.fbs  get_profile_resp.fbs  login.fbs  logout_req.fbs  logout_resp.fbs  register.fbs  remove_req.fbs  remove_resp.fbs  search_req.fbs  search_resp.fbs  view_friend_req.fbs  view_friend_resp.fbs  view_pending_friend_req.fbs  view_pending_friend_resp.fbs
flatbuffers/include/schemas/: account.h  account_generated.h  core.h  edit_post_perm_req_generated.h  edit_post_req_generated.h  login_generated.h  logout_req_generated.h  logout_resp_generated.h  message.h  new_post_req_generated.h  packet_generated.h  post.h  (+6 more)
flatbuffers/message/: _msg_types.fbs  build.sh  create_channel_req.fbs  create_channel_resp.fbs  get_msg_req.fbs  get_msg_resp.fbs  join_group_req.fbs  leave_group_req.fbs  put_msg_req.fbs  view_channel_req.fbs  view_channel_resp.fbs
flatbuffers/post/: build.sh  edit_comment_req.fbs  edit_post_perm_req.fbs  edit_post_req.fbs  get_comment_req.fbs  get_comment_resp.fbs  get_max_pid_req.fbs  get_max_pid_resp.fbs  get_post_req.fbs  get_post_resp.fbs  like_req.fbs  new_comment_req.fbs  new_post_req.fbs  post_perm.fbs  remove_comment_req.fbs  remove_post_req.fbs
include/: IntegrateSerCliTest.hpp  Log.hpp  TestCase.hpp  Utils.hpp
server/: Account.cpp  Account.hpp  Main.cpp  Message.cpp  Message.hpp  Post.cpp  Post.hpp  Router.cpp  Router.hpp  Session.cpp  Session.hpp  Types.hpp
server/tests/: IntegrateAccountTest.hpp  IntegratePostTest.hpp  TestMain.cpp  TestRouter.hpp
(+44 files in other folders)
